--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xxwatts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://RohitGeddam-tech.github.io/xxwats/",
+  "homepage": "https://RohitGeddam-tech.github.io/xxwatts/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
